fix: eliminar de caché los .env